--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
                 <li><a href="#Services-left">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li class="dropdown">
-                    <a href="project1.html">My Work</a>
+                     <a href="">My Work</a>
                     <div class="dropdown-menu">
                         <a href="project1.html">Calculator</a>
-                        <a href="project2.html">Digital Watch</a>
-                        <a href="project3.html">Weather Forecast</a>
+                        <a href="">Digital Watch</a>
+                        <a href="">Weather Forecast</a>
+                        <a href="">Others</a>
                     </div>
                 </li>
             </ul> 
