--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav><br><br><br>
         <div class="header-text">
             <p>Website Expert</p>
-            <h1>Hi, I am<br> <span>Ekhtier Ahmed </span><br> from<br> <span>Bangladesh.</span></h1>
+            <h1>Hi, I am<br> <span>Ekhtier</span><br>from<br><span>Bangladesh.</span></h1>
         </div>
     </div>
  </div>  
